prusti-tests/tests/verify_overflow/ui/counterexamples/return.stderr
error: [Prusti: verification error] postcondition might not hold.
  --> $DIR/return.rs:6:11
   |
6  | #[ensures(false)]
   |           ^^^^^
   |
note: the error originates here
  --> $DIR/return.rs:7:1
   |
7  | / fn test1(x: i32) -> i32 {
8  | |     if x > 0 {
9  | |         return 3;
10 | |     }
11 | |     let y = 5 + x;
12 | |     y * 2
13 | | }
   | |_^
note: counterexample for "x"
       value:   -1
  --> $DIR/return.rs:7:10
   |
7  | fn test1(x: i32) -> i32 {
   |          ^
note: counterexample for "y"
       value:   4
  --> $DIR/return.rs:11:13
   |
11 |     let y = 5 + x;
   |             ^^^^^
note: counterexample for "result"
       value:   8
  --> $DIR/return.rs:12:5
   |
12 |     y * 2
   |     ^^^^^

error: aborting due to previous error

